--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
             <ul class="header__sotsial flex">
 
-                <li><a class="telegram" target="blank" href="https://t.me/buxgalteraudit_asia" ><i class="fa-brands fa-telegram fa-2xl"></i></a></li>
+                <li><a class="telegram" target="blank" href="https://t.me/buxgalteraudit2021asia" ><i class="fa-brands fa-telegram fa-2xl"></i></a></li>
                 <li><a class="instagram" target="blank" href="https://www.instagram.com/tohir2002student" ><i class="fa-brands fa-instagram fa-2xl"></i></a></li>
                 <li><a class="email" target="blank" href="mailto:takhirjantashbaev1@gmail.com" ><i class="fa-solid fa-at fa-2xl"></i></a></li>
                 <li class="burger flex">
@@ -96,22 +96,31 @@
                 </h3>
                 <div class="foto__grid grid">
                     <div class="foto__grid__item ">
-                        <img src="./img/toxir_11.jpg" alt="toxir">
+                        <img src="./img/0001.jpg" alt="toxir">
+                        <span>2022 mart 21</span>
                     </div>
                     <div class="foto__grid__item ">
-                        <img src="./img/toxir_11.jpg" alt="toxir">
+                        <img src="./img/00002.jpg" alt="toxir">
+                        <span>2021 Avgust 01</span>
+
                     </div>
                     <div class="foto__grid__item ">
-                        <img src="./img/toxir_11.jpg" alt="toxir">
+                        <img src="./img/00003.jpg" alt="toxir">
+                        <span>2021 dekabr 31</span>
+
                     </div>
                     <div class="foto__grid__item ">
-                        <img src="./img/toxir_11.jpg" alt="toxir">
+                        <img src="./img/00005.jpg" alt="toxir">
+                        <span>2022 mart 08</span>
+
                     </div>
                     <div class="foto__grid__item ">
-                        <img src="./img/toxir_11.jpg" alt="toxir">
+                        <span>2022 mart 19</span>
+                        <img src="./img/00004.jpg" alt="toxir">
                     </div>
                     <div class="foto__grid__item ">
-                        <img src="./img/toxir_11.jpg" alt="toxir">
+                        <span>2022 mart 20</span>
+                        <img src="./img/00006.jpg" alt="toxir">
                     </div>
                     
                 </div>
